--- a/src/Generate_Figures.ipynb
+++ b/src/Generate_Figures.ipynb
@@ -1,6 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We consider numerical results generated from ED and DMRG for the n-particle entanglement entropy of the $J$-$V$ model at half filling in the Luttinger Liquid phase $-2 < V/J < 2$.\\begin{align}\n",
+    "H &= -J\\sum_{i=1}^L(c_i^\\dagger c_{i+1}+c^\\dagger_{i+1}c_i)+V\\sum_{i=1}^Ln_in_{i+1}\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All plots used in the paper can be generated from this notebook. The other notebook in this folder `Generating_Coefficients` can be used to generate all the data files containing the coefficients from the fits."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 0. Import Packages and setup enviroment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -11,25 +34,25 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt \n",
     "from matplotlib.pyplot import cm\n",
-    "import scipy.special as sp\n",
-    "from scipy.optimize import least_squares\n",
     "from dgutils import colors as colortools\n",
+    "from functools import partial\n",
+    "import scipy.special as sp\n",
     "from scipy import interpolate\n",
+    "from scipy.optimize import curve_fit\n",
     "import os \n",
     "#from lmfit import minimize, Parameters, Parameter, report_fit,Model\n",
     "%matplotlib inline\n",
     "\n",
-    "# plot style\n",
-    "#plt.style.reload_library()\n",
-    "#plot_style = {'notebook':'../include/notebook.mplstyle','aps':'../include/IOP_Large.mplstyle'}\n",
-    "\n",
-    "\n",
-    "#figsize = plt.rcParams['figure.figsize'] \n",
-    "#plt.rcParams [\"figure.dpi\"] = 72\n",
-    "\n",
     "dblsize = [0.86*6.4,0.86*2.86312]\n",
     "\n",
     "%config InlineBackend.figure_format = 'svg'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Load data files and function for loading specific data"
    ]
   },
   {
@@ -112,6 +135,13 @@
     "                idx = np.where(V==v)\n",
     "                ent.append(np.exp(-S1[idx]))\n",
     "    return N, oneN,ent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Figure 3: Dependence of the parameter g on interaction strength"
    ]
   },
   {
@@ -895,24 +925,95 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from scipy.optimize import curve_fit"
+    "## 2. Fitting form for all interactions and specific fitting form for V/J=-1.65"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from functools import partial\n",
     "def scalingform(x,c1,c2,c3,c4,c5,v):\n",
     "    exp = 4*g(v)\n",
-    "    return c1*x**4+c2*x**(3+exp)+c3*x**2+c4*x**(1+exp)+c5"
+    "    return c1*x**4+c2*x**(3+exp)+c3*x**2+c4*x**(1+exp)+c5\n",
+    "def fitfunc(x,a,b,c):\n",
+    "    return a*x**4+b*x**2+c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fig 04: Comparison of the exponentiated negative corrections to the 1-particle entanglement entropy of Rényi index 2 for different interaction strengths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_1168\\2080719891.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m#coloralpha2={-1.65:'#000000',1.75:\"#115948\",1.65:'#1A896F',-1:'#27CFA8'}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mcoloralpha2\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1.65\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m'#000000'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1.75\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m'#1A896F'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1.65\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m'#27CFA8'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m'#30FFCF'\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstyle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreload_library\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstyle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'../include/IOP.mplstyle'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0mfig\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0max\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msubplots\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "markers = {-1.65:'>',-1:'o',1.65:'s',1.75:'D'}\n",
+    "#coloralpha2={-1.65:'#000000',1.75:\"#115948\",1.65:'#1A896F',-1:'#27CFA8'}\n",
+    "coloralpha2={-1.65:'#000000',1.75:'#1A896F',1.65:'#27CFA8',-1:'#30FFCF'}\n",
+    "plt.style.reload_library()\n",
+    "with plt.style.context('../include/IOP.mplstyle'):\n",
+    "    fig,ax=plt.subplots()\n",
+    "    for i,v in enumerate([-1.65,-1.0,1.65,1.75]):\n",
+    "            nval=1\n",
+    "            α=2\n",
+    "            N, oneN, ent = loaddata(α,v,nval)\n",
+    "            oneN=np.array(oneN)\n",
+    "            ent = np.array(ent)\n",
+    "            ent=ent.reshape((-1,))\n",
+    "            if v == -1.65:\n",
+    "                fit, cov= curve_fit(fitfunc1, oneN, ent)\n",
+    "                perr = np.sqrt(np.diag(cov))\n",
+    "                ratios=np.linspace(.01,.11,1000)\n",
+    "                plt.plot(ratios,fitfunc1(ratios,*fit),linewidth=.5,color=coloralpha2[v],label=rf'$\\alpha={α}$:'+(r'$(%.3e\\pm%.3e)\\frac{1}{N^{4}}+(%.3e\\pm%.3e)\\frac{1}{N^{2}}+(%.3e\\pm%.3e)$'%(fit[0],perr[0],fit[1],perr[1],fit[2],perr[2])))\n",
+    "                plt.fill_between(ratios,fitfunc1(ratios,*fit),fitfunc1(ratios,*fit+perr),color=coloralpha2[v],alpha=.5)\n",
+    "                plt.fill_between(ratios,fitfunc1(ratios,*fit),fitfunc1(ratios,*fit-perr),color=coloralpha2[v],alpha=.5) \n",
+    "                for j in range(len(ent)):\n",
+    "                    plt.scatter(oneN[j],ent[j],marker = markers[v],color=coloralpha2[v],s=10)\n",
+    "                plt.text(.122,fitfunc1(.11,*fit),rf'$V/J={v:3.2f}$' if v<0 else r'$V/J=\\phantom{-}'+f'{v:3.2f}$',ha=\"center\",va=\"center\",size='xx-small')\n",
+    "            else: \n",
+    "                scalingv=partial(scalingform,v=v)\n",
+    "                fit, cov= curve_fit(scalingv, oneN, ent)\n",
+    "                perr = np.sqrt(np.diag(cov))\n",
+    "                plt.plot(ratios,scalingv(ratios,*fit),linewidth=.5,color=coloralpha2[v],label=f'α={α}')\n",
+    "                plt.fill_between(ratios,scalingv(ratios,*fit),scalingv(ratios,*fit+perr),color=coloralpha2[v],alpha=.5)\n",
+    "                plt.fill_between(ratios,scalingv(ratios,*fit),scalingv(ratios,*fit-perr),color=coloralpha2[v],alpha=.5) \n",
+    "                for j in range(len(ent)):\n",
+    "                    plt.scatter(oneN[j],ent[j],marker = markers[v],linewidths=0.5,s=10,c=colortools.get_alpha_hex(coloralpha2[v],0.5),zorder=10, edgecolors=coloralpha2[v])\n",
+    "                plt.text(.1215,scalingv(.11,*fit),rf'$V/J={v:3.2f}$' if v<0 else r'$V/J=\\phantom{-}'+f'{v:3.2f}$',ha=\"center\",va=\"center\",size='xx-small')\n",
+    "    ax.set_xlabel(r'$1/N$')\n",
+    "    ax.set_ylabel(r'$e^{-\\Delta S_2{(n=1)}}$')\n",
+    "    plt.xlim(.01,.11)\n",
+    "    plt.savefig('../figures/Fig04_alpha2diffV.pdf')\n",
+    "    plt.savefig('../figures/Fig04_alpha2diffV.svg')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fig 05: "
    ]
   },
   {
@@ -2838,8 +2939,6 @@
     }
    ],
    "source": [
-    "def fitfunc(x,a,b,c):\n",
-    "    return a*x**4+b*x**2+c\n",
     "plt.style.reload_library()\n",
     "with plt.style.context('../include/IOP.mplstyle'):\n",
     "    fig, axs = plt.subplots(1,2,sharey=True, constrained_layout=True, figsize=dblsize, sharex=False)\n",
@@ -2903,20 +3002,6 @@
     "    ax1.set_ylim(.74,.97)\n",
     "    plt.savefig('../Figures/Fig06_n1diffalphas.pdf')\n",
     "    plt.savefig('../Figures/Fig06_n1diffalphas.svg')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fitfunc1(x,b,c,d):\n",
-    "    return b*x**4+c*x**2+d\n",
-    "from functools import partial\n",
-    "def scalingform(x,c1,c2,c3,c4,c5,v):\n",
-    "    exp = 4*g(v)\n",
-    "    return c1*x**4+c2*x**(3+exp)+c3*x**2+c4*x**(1+exp)+c5"
    ]
   },
   {
@@ -37795,51 +37880,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "markers = {-1.65:'>',-1:'o',1.65:'s',1.75:'D'}\n",
-    "#coloralpha2={-1.65:'#000000',1.75:\"#115948\",1.65:'#1A896F',-1:'#27CFA8'}\n",
-    "coloralpha2={-1.65:'#000000',1.75:'#1A896F',1.65:'#27CFA8',-1:'#30FFCF'}\n",
-    "plt.style.reload_library()\n",
-    "with plt.style.context('../include/IOP.mplstyle'):\n",
-    "    fig,ax=plt.subplots()\n",
-    "    for i,v in enumerate([-1.65,-1.0,1.65,1.75]):\n",
-    "            nval=1\n",
-    "            α=2\n",
-    "            N, oneN, ent = loaddata(α,v,nval)\n",
-    "            oneN=np.array(oneN)\n",
-    "            ent = np.array(ent)\n",
-    "            ent=ent.reshape((-1,))\n",
-    "            if v == -1.65:\n",
-    "                fit, cov= curve_fit(fitfunc1, oneN, ent)\n",
-    "                perr = np.sqrt(np.diag(cov))\n",
-    "                ratios=np.linspace(.01,.11,1000)\n",
-    "                plt.plot(ratios,fitfunc1(ratios,*fit),linewidth=.5,color=coloralpha2[v],label=rf'$\\alpha={α}$:'+(r'$(%.3e\\pm%.3e)\\frac{1}{N^{4}}+(%.3e\\pm%.3e)\\frac{1}{N^{2}}+(%.3e\\pm%.3e)$'%(fit[0],perr[0],fit[1],perr[1],fit[2],perr[2])))\n",
-    "                #plt.plot(ratios,fitfunc(ratios,*fit),color=colors[i],label=f'α={α}')\n",
-    "                plt.fill_between(ratios,fitfunc1(ratios,*fit),fitfunc1(ratios,*fit+perr),color=coloralpha2[v],alpha=.5)\n",
-    "                plt.fill_between(ratios,fitfunc1(ratios,*fit),fitfunc1(ratios,*fit-perr),color=coloralpha2[v],alpha=.5) \n",
-    "                for j in range(len(ent)):\n",
-    "                    plt.scatter(oneN[j],ent[j],marker = markers[v],color=coloralpha2[v],s=10)\n",
-    "                plt.text(.122,fitfunc1(.11,*fit),rf'$V/J={v:3.2f}$' if v<0 else r'$V/J=\\phantom{-}'+f'{v:3.2f}$',ha=\"center\",va=\"center\",size='xx-small')\n",
-    "            else: \n",
-    "                scalingv=partial(scalingform,v=v)\n",
-    "                fit, cov= curve_fit(scalingv, oneN, ent)\n",
-    "                perr = np.sqrt(np.diag(cov))\n",
-    "                #ratios=np.linspace(.01,.11,1000)\n",
-    "                #plt.plot(ratios,scalingv(ratios,*fit),color=colors[i],label=rf'$\\alpha={α}$:'+(r'$(%.3e\\pm%.3e)\\frac{1}{N^{4}}+(%.3e\\pm%.3e)\\frac{1}{N^{3.27}}+(%.3e\\pm%.3e)\\frac{1}{N^{2}}+(%.3e\\pm%.3e)\\frac{1}{N^{1.27}}+(%.3e\\pm%.3e)$'%(fit[0],perr[0],fit[1],perr[1],fit[2],perr[2],fit[3],perr[3],fit[4],perr[4])))\n",
-    "                plt.plot(ratios,scalingv(ratios,*fit),linewidth=.5,color=coloralpha2[v],label=f'α={α}')\n",
-    "                plt.fill_between(ratios,scalingv(ratios,*fit),scalingv(ratios,*fit+perr),color=coloralpha2[v],alpha=.5)\n",
-    "                plt.fill_between(ratios,scalingv(ratios,*fit),scalingv(ratios,*fit-perr),color=coloralpha2[v],alpha=.5) \n",
-    "                for j in range(len(ent)):\n",
-    "                    plt.scatter(oneN[j],ent[j],marker = markers[v],linewidths=0.5,s=10,c=colortools.get_alpha_hex(coloralpha2[v],0.5),zorder=10, edgecolors=coloralpha2[v])\n",
-    "                plt.text(.1215,scalingv(.11,*fit),rf'$V/J={v:3.2f}$' if v<0 else r'$V/J=\\phantom{-}'+f'{v:3.2f}$',ha=\"center\",va=\"center\",size='xx-small')\n",
-    "    ax.set_xlabel(r'$1/N$')\n",
-    "    ax.set_ylabel(r'$e^{-\\Delta S_2{(n=1)}}$')\n",
-    "    #plt.legend()\n",
-    "       #plt.title(rf'n=1,v={v}, $2\\gamma^2+1$=%.2f'%(1.27)) \n",
-    "    plt.xlim(.01,.11)\n",
-    "    plt.savefig('../figures/Fig04_alpha2diffV.pdf')\n",
-    "    plt.savefig('../figures/Fig04_alpha2diffV.svg')\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
