Cleaned up plotting code

--- a/src/fixedratios.ipynb
+++ b/src/fixedratios.ipynb
@@ -151,8 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fitfunc(x,a,b):\n",
-    "    return a*x+b\n",
+    "\n",
     "from scipy.optimize import curve_fit"
    ]
   },
@@ -946,7 +945,7 @@
     "        Sarray = np.array(Sarrays[i])\n",
     "        Sarray = Sarray.reshape((-1,))\n",
     "        Narray = Narrays[i]\n",
-    "        fit, cov = curve_fit(fitfunc,Narray,Sarray)\n",
+    "        fit, cov = curve_fit(fitfuncfixed,Narray,Sarray)\n",
     "        perr=np.sqrt(np.diag(cov))\n",
     "        nN[i]=(1/ratios[i])\n",
     "        phi0[i]=fit[0]\n",
@@ -962,7 +961,7 @@
     "        Sarray = np.array(Sarrays[i])\n",
     "        Sarray = Sarray.reshape((-1,))\n",
     "        Narray = Narrays[i] \n",
-    "        fit, cov = curve_fit(fitfunc,Narray,Sarray)\n",
+    "        fit, cov = curve_fit(fitfuncfixed,Narray,Sarray)\n",
     "        perr=np.sqrt(np.diag(cov))\n",
     "        c[i]=fit[1]\n",
     "        err[i]=perr[1]\n",
@@ -2679,7 +2678,7 @@
     "        Sarray = np.array(Sarrays[i])\n",
     "        Sarray = Sarray.reshape((-1,))\n",
     "        Narray = Narrays[i]\n",
-    "        fit, cov = curve_fit(fitfunc,Narray,Sarray)\n",
+    "        fit, cov = curve_fit(fitfuncfixed,Narray,Sarray)\n",
     "        perr=np.sqrt(np.diag(cov))\n",
     "        ratio = ratios[i]\n",
     "        N=np.linspace(4,24,20)\n",
