--- a/src/Generate_Coefficients.ipynb
+++ b/src/Generate_Coefficients.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "b0ebe168",
    "metadata": {},
    "outputs": [],
@@ -209,12 +209,17 @@
     "                    Nvalues[key].append(N)\n",
     "                    Svalues[key].append(S[idx])\n",
     "def getkey(n,N): #used for fixed ratio fitting\n",
+    "    ratios=[2,3,4,5,6,7,8]\n",
     "    ratio=N/n\n",
     "    if ratio in ratios:\n",
     "        key = f'{int(ratio)}'\n",
     "        return key\n",
     "    else:\n",
-    "        return False"
+    "        return False\n",
+    "def g(v):\n",
+    "    k = np.pi/(2*np.arccos(-v/2))\n",
+    "    g=(k+1/k-2)/4\n",
+    "    return g "
    ]
   },
   {
@@ -227,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "c0e9ba97",
    "metadata": {},
    "outputs": [],
@@ -264,23 +269,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "id": "f7d3fe94",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "_savetxt_dispatcher() got an unexpected keyword argument 'dtype'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_34372\\3772229382.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[0mperr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdiag\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcov\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'α'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mperr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mperr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mperr\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msavetxt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'../data/coefficients/CoeffsFixedn/Fixedncoefficientsv={v}.dat'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mheader\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34mr'α,$C_4$,$C_2$,$C_0$'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[0mvs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1.00\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1.65\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1.75\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;31m#for v in vs:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<__array_function__ internals>\u001b[0m in \u001b[0;36msavetxt\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: _savetxt_dispatcher() got an unexpected keyword argument 'dtype'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nval=1\n",
     "v=-1.65\n",
@@ -292,10 +284,20 @@
     "    ent=ent.reshape((-1,))\n",
     "    fit, cov= curve_fit(fitfunc, oneN, ent)\n",
     "    perr = np.sqrt(np.diag(cov))\n",
-    "    data.append((f'α',fit[2],perr[2],fit[1],perr[1],fit[0],perr[0]))\n",
-    "np.savetxt(f'../data/coefficients/CoeffsFixedn/Fixedncoefficientsv={v}.dat',data,header=r'α,$C_4$,$C_2$,$C_0$',encoding='utf-8',dtype=str)\n",
-    "vs = [-1.00,1.65,1.75]\n",
-    "#for v in vs:\n",
+    "    data.append((α,fit[2],perr[2],fit[1],perr[1],fit[0],perr[0]))\n",
+    "np.savetxt(f'../data/coefficients/CoeffsFixedn/Fixedncoefficientsn={nval}v={v}.dat',data,header=r'α,$C_4$,$\\delta C_4$,$C_2$,$\\delta C_2$,$C_0$,$\\Delta C_0$',encoding='utf-8')\n",
+    "for v in [-1.0,1.65,1.75]:\n",
+    "    data=[]\n",
+    "    for α in [1,2,3]:\n",
+    "        N, oneN, ent = loaddata(α,v,nval)\n",
+    "        oneN=np.array(oneN)\n",
+    "        ent = np.array(ent)\n",
+    "        ent=ent.reshape((-1,))\n",
+    "        scalingv=partial(scalingform,v=v)\n",
+    "        fit, cov= curve_fit(scalingv, oneN, ent)\n",
+    "        perr = np.sqrt(np.diag(cov))\n",
+    "        data.append((α,fit[4],perr[4],fit[3],perr[3],fit[2],perr[2],fit[1],perr[1],fit[0],perr[0]))\n",
+    "    np.savetxt(f'../data/coefficients/CoeffsFixedn/Fixedncoefficientsn={nval}v={v}.dat',data,header=r'α,$C_4$,$\\delta C_4$,$C_{3+4g}$,$\\delta C_{3+4g}$,$C_2$,$\\Delta C_2$,$C_{1+4g}$,$\\delta C_{1+4g}$,$C_0$,$\\delta C_0$',encoding='utf-8')\n",
     "    "
    ]
   },
@@ -309,8 +311,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "5c3c4883",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for nval in [2,3]:\n",
+    "    for v in [-1.65,-1.0,1.65,1.75]:\n",
+    "        data=[]\n",
+    "        for α in [1,2,3]:\n",
+    "            N, oneN, ent = loaddata(α,v,nval)\n",
+    "            oneN=np.array(oneN)\n",
+    "            ent = np.array(ent)\n",
+    "            ent=ent.reshape((-1,))\n",
+    "            fit, cov= curve_fit(fitfunc23, oneN, ent)\n",
+    "            perr = np.sqrt(np.diag(cov))\n",
+    "            data.append((α,fit[4],perr[4],fit[3],perr[3],fit[2],perr[2],fit[1],perr[1],fit[0],perr[0]))\n",
+    "        np.savetxt(f'../data/coefficients/CoeffsFixedn/Fixedncoefficientsn={nval}v={v}.dat',data,header=r'α,$C_4$,$\\delta C_4$,$C_{3}$,$\\delta C_{3}$,$C_2$,$\\Delta C_2$,$C_{1}$,$\\delta C_{1}$,$C_0$,$\\delta C_0$',encoding='utf-8')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c81fe42",
+   "metadata": {},
+   "source": [
+    "### Fixed Ratio Coefficients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "fe2c7bb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for v in [-1.65,-1.0,1.65,1.75]:\n",
+    "    for α in [1,2,3]:\n",
+    "        N2=[]\n",
+    "        N3=[]\n",
+    "        N4=[]\n",
+    "        N5=[]\n",
+    "        N6=[]\n",
+    "        N7=[]\n",
+    "        N8=[]\n",
+    "        S2=[]\n",
+    "        S3=[]\n",
+    "        S4=[]\n",
+    "        S5=[]\n",
+    "        S6=[]\n",
+    "        S7=[]\n",
+    "        S8=[]\n",
+    "        Nvalues={'2':N2,'3':N3,'4':N4,'5':N5,'6':N6,'7':N7,'8':N8}\n",
+    "        Svalues={'2':S2,'3':S3,'4':S4,'5':S5,'6':S6,'7':S7,'8':S8}\n",
+    "        Sarrays=[S2,S3,S4,S5,S6,S7,S8]\n",
+    "        Narrays=[N2,N3,N4,N5,N6,N7,N8]\n",
+    "        ratios=[2,3,4,5,6,7,8]\n",
+    "        addData(α,v,Nvalues, Svalues)\n",
+    "        data=[]\n",
+    "        for i in range(len(Nvalues)):\n",
+    "            Sarray = np.array(Sarrays[i])\n",
+    "            Sarray = Sarray.reshape((-1,))\n",
+    "            Narray = Narrays[i]\n",
+    "            fit, cov = curve_fit(fitfuncfixed,Narray,Sarray)\n",
+    "            perr=np.sqrt(np.diag(cov))\n",
+    "            ratio = ratios[i]\n",
+    "            data.append((1/ratio,fit[1],perr[1],fit[0],perr[0]))\n",
+    "        np.savetxt(f'../data/coefficients/CoeffsFixedratio/v={v}α={α}.dat',data,header=r'$n/N$,$\\Phi_0$,$\\delta \\Phi_0$,$\\Phi_1,$\\delta Phi_1$',encoding='utf-8')\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c646bc9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def phi0coeffs(α,v):\n",
+    "    N2=[]\n",
+    "    N3=[]\n",
+    "    N4=[]\n",
+    "    N5=[]\n",
+    "    N6=[]\n",
+    "    N7=[]\n",
+    "    N8=[]\n",
+    "    S2=[]\n",
+    "    S3=[]\n",
+    "    S4=[]\n",
+    "    S5=[]\n",
+    "    S6=[]\n",
+    "    S7=[]\n",
+    "    S8=[]\n",
+    "    Nvalues={'2':N2,'3':N3,'4':N4,'5':N5,'6':N6,'7':N7,'8':N8}\n",
+    "    Svalues={'2':S2,'3':S3,'4':S4,'5':S5,'6':S6,'7':S7,'8':S8}\n",
+    "    Sarrays=[S2,S3,S4,S5,S6,S7,S8]\n",
+    "    Narrays=[N2,N3,N4,N5,N6,N7,N8]\n",
+    "    ratios=[2,3,4,5,6,7,8]\n",
+    "    addData(α,v,Nvalues, Svalues)\n",
+    "    nN=[]\n",
+    "    phi0=[]\n",
+    "    phi1=[]\n",
+    "    for i in range(len(ratios)):\n",
+    "        Sarray = np.array(Sarrays[i])\n",
+    "        Sarray = Sarray.reshape((-1,))\n",
+    "        Narray = Narrays[i]\n",
+    "        if v == .5:\n",
+    "            if ratios[i]==2:\n",
+    "                fit, cov = curve_fit(fitfuncfixed,Narray[-3:],Sarray[-3:])\n",
+    "            else:\n",
+    "                fit, cov = curve_fit(fitfuncfixed,Narray[-2:],Sarray[-2:])\n",
+    "        else:\n",
+    "            fit, cov = curve_fit(fitfuncfixed,Narray[-2:],Sarray[-2:])  \n",
+    "        err=np.sqrt(np.diag(cov))\n",
+    "        nN.append(1/ratios[i])\n",
+    "        nN.append(1-(1/ratios[i]))\n",
+    "        phi0.append(fit[0])\n",
+    "        phi0.append(fit[0])\n",
+    "        phi1.append(fit[1])\n",
+    "        phi1.append(fit[1])\n",
+    "    fitphi0,covphi0=curve_fit(sinefit,nN,phi0)  \n",
+    "    fitphi1,covphi1=curve_fit(sinefit,nN,phi1)\n",
+    "    return fitphi0,fitphi1                                                           "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "27f73028",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for v in [-1.65,-1.00,1.65,1.75]:\n",
+    "    data = []\n",
+    "    α=1\n",
+    "    N, nN, ent=loaddatafull(α,v)\n",
+    "    fitphi0,fitphi1=phi0coeffs(α,v)\n",
+    "    nNmap = {}\n",
+    "    entmap={}\n",
+    "    phi0map={}\n",
+    "    phi1map={}\n",
+    "    for Nval, nNval,entval in zip(N, nN,ent):\n",
+    "        if nNval in nNmap.keys() and Nval > nNmap[nNval]:\n",
+    "            nNmap[nNval] = Nval\n",
+    "            entmap[nNval] = entval/Nval\n",
+    "            phi0map[nNval]=sinefit(nNval,*fitphi0)\n",
+    "            phi1map[nNval]=sinefit(nNval,*fitphi1)\n",
+    "        elif not (nNval in nNmap.keys()):\n",
+    "            nNmap[nNval] = Nval\n",
+    "            entmap[nNval] = entval/Nval\n",
+    "            phi0map[nNval]=sinefit(nNval,*fitphi0)\n",
+    "            phi1map[nNval]=sinefit(nNval,*fitphi1)\n",
+    "    for ratio in nNmap.keys():\n",
+    "        data.append((ratio,nNmap[ratio],entmap[ratio],phi0map[ratio],phi1map[ratio]))\n",
+    "    \n",
+    "    np.savetxt(f'../data/coefficients/CoeffsFullDataSet/Phicoefficientsv={v}.dat',data,header=r'$n/N$,$N$,$S_1/N$,$\\Phi_0(n/N)$,$\\Phi_1(n/N)$',encoding='utf-8')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2ea2bbb",
    "metadata": {},
    "outputs": [],
    "source": []
